<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/darkBlue">

    <TextView
        android:id="@+id/txtCalculadoraPitagoras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora_pitagoras"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:contentDescription="@string/texto_imagem_triangulo"
        android:id="@+id/imageTriangle"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/txtCalculadoraPitagoras"
        android:src="@drawable/pitagoras" />

    <TextView
        android:id="@+id/txtSimplifiqueSeusCalculos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simplifique_seus_calculos"
        android:paddingTop="30dp"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@id/imageTriangle"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSimplifiqueSeusCalculos"
        android:layout_marginTop="20dp"
        android:hint="@string/informe_seu_nome"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:autofillHints="none" />


    <EditText
        android:id="@+id/edtPrimeiroCateto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/primeiro_cateto"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        android:layout_below="@id/edtNome"
        android:autofillHints="none" />

    <EditText
        android:id="@+id/edtSegundoCateto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/segundo_cateto"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        android:layout_below="@id/edtPrimeiroCateto"
        android:autofillHints="none" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtSegundoCateto"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:onClick="calcularPitagoras"
        android:text="@string/calcular"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:layout_below="@id/btnCalcular" />





</RelativeLayout>